# egui-android-test

egui-view/: .gitignore
egui-view/app/: build.gradle.kts
egui-view/app/src/androidTest/java/com/foxhunter/egui_view/: ExampleInstrumentedTest.kt
egui-view/app/src/main/java/com/foxhunter/egui_view/: MainActivity.kt
egui-view/app/src/main/java/com/foxhunter/egui_view/ui/: NativeGLSurfaceView.kt
egui-view/app/src/main/java/com/foxhunter/egui_view/ui/theme/: Color.kt  Theme.kt  Type.kt
egui-view/app/src/test/java/com/foxhunter/egui_view/: ExampleUnitTest.kt
egui-view/gradle/wrapper/: gradle-wrapper.properties
egui-view/native_gl_surface/: .androidsdk  .gitignore  Cargo.toml  build.rs  build.sh  flake.nix  nix_shell_build.sh
egui-view/native_gl_surface/src/: lib.rs
native_activity/: Cargo.toml
native_activity/src/: backend_panel.rs  lib.rs
